--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,7 @@ body {
     font-size: 1.1rem;
     max-width: 800px;
     margin: 0 auto;
-    text-align: center;
+    text-align: justify;
     line-height: 1.8;
 }
 
